--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- 4. Below your link create an unordered list with multiple list items in it. The list items should include a timeline about you, facts about you, or you can have two lists that include both. -->
  <Ul>
     <li>Classically trained to Joust</li>
-    <li>Loves guda cheese and summer sausage</li>
+    <li>Loves cheese and summer sausage</li>
     <li>Worked as a Commercial Plumber</li>
  </Ul>
     <!-- 5. Add a link at the bottom of your page that links to your linkedIn account.  -->
