--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
      <!-- Complete the following steps. Once you are done create a new repository in github, deploy this file to github and send a link to the project in Google Classroom-->
     <!-- 1. add an H1 tag with your name (hint try using emmet by typing H1 and hit tab) -->
- 
+ <h1><a href="./education.html">Education</a>
+     <a href="./jobs.html">Jobs</a>
+</h1>
  <H1>Alexander Randall Evras</H1>
  
     <!-- 2. Add a photo of yourself below your h1 heading  -->
@@ -27,8 +29,9 @@
     <!-- 6. If you want to go above and beyond and extra flourishes to you page, that would be encouraged and celebrated! -->
  <img src="https://links.imagerelay.com/cdn/34/ql/41ed72bfdd3c4511b079f19e7699bbb4/october-13.jpg" alt="Meats and Cheeses">
     <!-- 7. Deploy this page to  your github and submit the link to your repository. Make sure that everything works on Live Server before you deploy your page!  -->
- 
-    <!--  -->
+ <h2>NOW WITH 5% MORE CHEESE!</h2>
+ <img src="https://th.bing.com/th/id/R.0e30315f6df16e4ecec558582520d657?rik=AB14CjBqJ6PWrw&riu=http%3a%2f%2fcdn.notonthehighstreet.com%2ffs%2f49%2fef%2f4aae-e12c-4032-8417-77424c32f256%2foriginal_finest-hard-cheese-selection.jpg&ehk=TRiqUdGKyuWMECFvWDZMTZM%2fqllNW8zgLJFYRfhjs8w%3d&risl=&pid=ImgRaw&r=0" alt="5% more cheese">
+
 
 </body>
 </html>
