--- a/education.html
+++ b/education.html
@@ -7,9 +7,56 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><a href="./jobs.html">Jobs</a>
-    <a href="https://evrasalexander.github.io/Aboutme/">Home Page</a>
-    </h1>
+    <a href="./jobs.html">Jobs</a>
+    <a href="./index.html">Home Page</a>
+
+<style>
+    .olive-text{
+        color: orangered;
+    }    
+    .smaller-text{
+        font-size: 15px;
+    }
+    .smaller-image{
+        width: 700px;
+    }
+    .font-mono{
+        font-family: monospace;
+    }
+</style>
+<h1 class='olive-text font-mono'>Education History
+</h1>
+
+<img class='smaller-image' src="https://img.geocaching.com/waymarking/display/7d56a522-ee0c-444a-85ec-2bb7fa8a2b74.jpg" alt="mason high school">
+
+<h2 class='font-mono'>
+William Mason High School
+</h2>
+
+<p>
+    <ul class='font-size'>
+        <li>Founded and organized a LARP after school club of 40-60 kids at a time every saturday during the warm seasons from 12pm-3pm at Pine Hill public park.</li>
+        <li>Graduating class of 2012!</li>
+        <li>Did graduate a few months early.</li>
+    </ul>
+</p>
+
+<img class='smaller-image' src="https://th.bing.com/th/id/OIP.Xirjalf66F6-J9JdF1GiIQHaEK?pid=ImgDet&rs=1" alt="">
+
+<h2 class='font-mono'>
+    Kable Academy
+</h2>
+
+<p class='font-size'>
+    <ul>
+        <li>Started education January 03, 2022.</li>
+        <li>Feeling good in the first week!</li>
+        <li>I feel as if I am beginning a life time career.</li>
+    </ul>
+
+</p>
+
+
     
 </body>
 </html>
