--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 <body>
      <!-- Complete the following steps. Once you are done create a new repository in github, deploy this file to github and send a link to the project in Google Classroom-->
     <!-- 1. add an H1 tag with your name (hint try using emmet by typing H1 and hit tab) -->
- <h1><a href="./education.html">Education</a>
-     <a href="./jobs.html">Jobs</a>
-</h1>
- <H1>Alexander Randall Evras</H1>
+<a href="./education.html">Education</a>
+<a href="./jobs.html">Jobs</a>
+ <H1 class="font-mono" >Alexander Randall Evras</H1>
  
     <!-- 2. Add a photo of yourself below your h1 heading  -->
  <img src="https://th.bing.com/th/id/OIP.lkTgZx2whOj7rzJQj2Q6mAHaHa?w=204&h=204&c=7&r=0&o=5&pid=1.7" alt="Im loving it">
@@ -21,8 +20,8 @@
     <!-- 4. Below your link create an unordered list with multiple list items in it. The list items should include a timeline about you, facts about you, or you can have two lists that include both. -->
  <Ul>
     <li>Classically trained to Joust</li>
-    <li>Loves cheese and summer sausage</li>
-    <li>Worked as a Commercial Plumber</li>
+    <li>Loves meat and cheese boards</li>
+    <li>Worked as a Commercial plumber</li>
  </Ul>
     <!-- 5. Add a link at the bottom of your page that links to your linkedIn account.  -->
  <a href="http://www.linkedin.com/feed/?trk=onboarding-landing">My Linkedin</a>
