Night Mode Push

--- a/education.html
+++ b/education.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
-<body>
-    <a href="./jobs.html">Jobs</a>
-    <a href="./index.html">Home Page</a>
+
+<body class=" white-text night-mode">
+
+    <a class="link-color" href="./jobs.html">Jobs</a>
+    <a class="link-color"  href="./index.html">Home Page</a>
 
 <style>
-    .olive-text{
-        color: orangered;
-    }    
+  
     .smaller-text{
         font-size: 15px;
     }
@@ -21,20 +22,45 @@
         width: 700px;
     }
     .font-mono{
+        font-family: monospace; font-size: 35px;
+    }
+    .font-mono-S{
         font-family: monospace;
     }
+    .font-courier{
+        font-family: 'Courier New', Courier, monospace;         font-size: 15px;
+        line-height: 2;
+        font-weight: 850;
+    }
+    a:hover{
+        color:darkgreen
+    }
+    .white-text{
+        color: white
+    }
+    .link-color{
+        color: turquoise;
+    }
+    .night-mode{
+        background-color: #000000;
+    }
+
+
 </style>
+
 <h1 class='olive-text font-mono'>Education History
 </h1>
 
 <img class='smaller-image' src="https://img.geocaching.com/waymarking/display/7d56a522-ee0c-444a-85ec-2bb7fa8a2b74.jpg" alt="mason high school">
 
-<h2 class='font-mono'>
+<h2 class= "font-mono-S">
 William Mason High School
 </h2>
 
+<a class="link-color" href="http://www.masonohioschools.com/">Learn more here</a>
+
 <p>
-    <ul class='font-size'>
+    <ul class='font-size font-courier'>
         <li>Founded and organized a LARP after school club of 40-60 kids at a time every saturday during the warm seasons from 12pm-3pm at Pine Hill public park.</li>
         <li>Graduating class of 2012!</li>
         <li>Did graduate a few months early.</li>
@@ -43,18 +69,18 @@ William Mason High School
 
 <img class='smaller-image' src="https://th.bing.com/th/id/OIP.Xirjalf66F6-J9JdF1GiIQHaEK?pid=ImgDet&rs=1" alt="">
 
-<h2 class='font-mono'>
+<h2 class='font-mono-S'>
     Kable Academy
 </h2>
 
-<p class='font-size'>
-    <ul>
+<a class="link-color" href="https://kableacademy.com/">Learn more here</a>
+
+    <ul class="font-courier">
         <li>Started education January 03, 2022.</li>
         <li>Feeling good in the first week!</li>
         <li>I feel as if I am beginning a life time career.</li>
     </ul>
 
-</p>
 
 
     
