--- a/jobs.html
+++ b/jobs.html
@@ -48,7 +48,7 @@
 
 </style>
 
-<h1>
+<h1 class="font-mono">
     Jobs History
 </h1>
 <img class='smaller-image' src="https://th.bing.com/th/id/OIP.s__VPY1hmvK5s2q_X8zN7wHaEo?pid=ImgDet&rs=1" alt="Moerlein Lager House">
@@ -90,7 +90,7 @@ Knights of Valour - Squire
 Lee Company - Sheet metal/Plumbing helper
 </h2>
 
-<a class="link-color" href="http://knightsofvalour.com/">Learn more here</a>
+<a class="link-color" href="https://www.leecompany.com/">Learn more here</a>
 
 <p>
 
