--- a/jobs.html
+++ b/jobs.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>    
 
 <a class="link-color" href="./education.html">Education</a>
@@ -59,13 +60,13 @@
 <a class="link-color" href="https://www.moerleinlagerhouse.com/"> Learn more here</a>
 
 
-    <ul class="font-courier">
+    <l class="font-courier">
 
         <li>Providing upbeat high quality service for patrons in need of deliciouse food and drink.</li>
         <li>Following the law and protocol to ID all guests ordering alcohol.</li>
         <li>Being involved in the expediting process to maximize food and plating quality for my guests.</li>
 
-    </ul>
+    </l>
 
 
     <img class='smaller-image' src="https://i.pinimg.com/originals/be/36/6c/be366c2cae7c9dea302845c3a208898c.jpg" alt="">
@@ -77,11 +78,11 @@ Knights of Valour - Squire
 
 <p>
 
-   <ul class="font-courier">
-       <li>1 year of horse care and "maintenence", cleaning hooves,bathing, feeding, riding,and training the horses.</li>
+   <l class="font-courier">
+       <li>1 year of horse care and "maintenence", cleaning hooves, bathing, feeding, riding,and training the horses.</li>
        <li>Aiding and assisting in tournaments directly with Knights and directing aswell as maintaining the horses and clearing lance debris from the lists. </li>
        <li>Training with the horses in Jousting, to compete in the renaissance festival tournaments proffessionaly.</li>
-   </ul>
+   </l>
 
 </p>
 
@@ -94,11 +95,11 @@ Lee Company - Sheet metal/Plumbing helper
 
 <p>
 
-   <ul class="font-courier" >
+   <l class="font-courier" >
        <li>Sheet metal helper for my first 6 months learning to craft and install ductwork.</li>
        <li>Plumbing helper for 3 years, soldering, brazing and installing copper pipe water and refridgeration systems, aswell as installing Cast Iron and PVC storm drain, main drain line, and underground systems</li>
        <li>Certified and trained in Forklift/Industrial Forklift, Boom Lift and Sissor Lift operations.</li>
-   </ul>
+   </l>
 
 </p>
 
