--- a/education.html
+++ b/education.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class=" white-text night-mode">
@@ -48,7 +48,7 @@
 
 </style>
 
-<h1 class='olive-text font-mono'>Education History
+<h1 class='font-mono'>Education History
 </h1>
 
 <img class='smaller-image' src="https://img.geocaching.com/waymarking/display/7d56a522-ee0c-444a-85ec-2bb7fa8a2b74.jpg" alt="mason high school">
@@ -60,11 +60,11 @@ William Mason High School
 <a class="link-color" href="http://www.masonohioschools.com/">Learn more here</a>
 
 <p>
-    <ul class='font-size font-courier'>
+    <l class='font-size font-courier'>
         <li>Founded and organized a LARP after school club of 40-60 kids at a time every saturday during the warm seasons from 12pm-3pm at Pine Hill public park.</li>
         <li>Graduating class of 2012!</li>
         <li>Did graduate a few months early.</li>
-    </ul>
+    </l>
 </p>
 
 <img class='smaller-image' src="https://th.bing.com/th/id/OIP.Xirjalf66F6-J9JdF1GiIQHaEK?pid=ImgDet&rs=1" alt="">
@@ -75,11 +75,11 @@ William Mason High School
 
 <a class="link-color" href="https://kableacademy.com/">Learn more here</a>
 
-    <ul class="font-courier">
+    <l class="font-courier">
         <li>Started education January 03, 2022.</li>
         <li>Feeling good in the first week!</li>
         <li>I feel as if I am beginning a life time career.</li>
-    </ul>
+    </l>
 
 
 
